updated pom & manifest files